kubernetes/overlays/desenv/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: catalogo
  annotations:
spec:
  ingressClassName: traefik
  rules:
    - host: catalogo.dev.ipea.gov.br
      http:
        paths:
          - backend:
              service:
                name: catalogo
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - catalogo.dev.ipea.gov.br
      secretName: dev-star-certificate
